<resources>
    <string name="app_name">Калькулятор</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="numberPoint">.</string>
    <string name="operatorDelete">C</string>
    <string name="operatorInversion">+/-</string>
    <string name="operatorPercent">%</string>
    <string name="operatorDevision">/</string>
    <string name="operatorMultiply">*</string>
    <string name="operatorAddition">+</string>
    <string name="operatorSubtraction">-</string>
    <string name="operatorResult">=</string>
</resources>