<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/calculator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:padding="24dp">
        </TextView>
        <TextView
            android:id="@+id/calculatorResylt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:text=""
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="18sp"
            android:padding="24dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/operatorDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onDeleteClick"
                android:text="@string/operatorDelete"
                android:background="@color/operatorsBackground"
                android:textColor="@color/operatorsTest"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/operatorInversion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onOperatorClick"
                android:text="@string/operatorInversion"
                android:background="@color/operatorsBackground"
                android:textColor="@color/operatorsTest"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/operatorPercent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onOperatorClick"
                android:text="@string/operatorPercent"
                android:background="@color/operatorsBackground"
                android:textColor="@color/operatorsTest"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:layout_weight="1">
            </Button>
            <Button
                android:id="@+id/operatorDevision"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onOperatorClick"
                android:text="@string/operatorDevision"
                android:background="@color/operatorsBackground"
                android:textColor="@color/operatorsTest"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:layout_weight="1">
            </Button>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/number1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:textSize="25sp"
            android:text="@string/number1"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/number2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:textSize="25sp"
            android:text="@string/number2"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/number3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:text="@string/number3"
            android:textSize="25sp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/operatorMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperatorClick"
            android:text="@string/operatorMultiply"
            android:background="@color/operatorsBackground"
            android:textColor="@color/operatorsTest"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="6dp"
            android:layout_weight="1">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/number4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:textSize="25sp"
            android:text="@string/number4"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/number5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:textSize="25sp"
            android:text="@string/number5"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/number6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:textSize="25sp"
            android:text="@string/number6"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/operatorAddition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:text="@string/operatorAddition"
            android:background="@color/operatorsBackground"
            android:textColor="@color/operatorsTest"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="6dp"
            android:layout_weight="1">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/number7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:text="@string/number7"
            android:textSize="25sp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/number8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:text="@string/number8"
            android:textSize="25sp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/number9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:text="@string/number9"
            android:textSize="25sp"
            android:layout_weight="1">

        </Button>
        <Button
            android:id="@+id/operatorSubtraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperatorClick"
            android:text="@string/operatorSubtraction"
            android:background="@color/operatorsBackground"
            android:textColor="@color/operatorsTest"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="6dp"
            android:layout_weight="1">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/number0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onNumberCkick"
            android:text="@string/number0"
            android:textSize="25sp"
            android:layout_weight="2">
        </Button>
        <Button
            android:id="@+id/numberPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onPointkick"
            android:text="@string/operatorSubtraction"
            android:textSize="25sp"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/operatorResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onResultCkick"
            android:text="@string/operatorResult"
            android:background="@color/operatorsBackground"
            android:textColor="@color/operatorsTest"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="6dp"
            android:layout_weight="1">
        </Button>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>